# rules-monorepo

./: .gitignore  BUILD.bazel  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  SECURITY.md
.github/workflows/: ci.yml
examples/: README.md
examples/rust_service/: BUILD.bazel  README.md
examples/rust_service/k8s/: deployment.yaml
examples/rust_service/src/: main.rs
rules_monorepo/: BUILD.bazel  README.md  defs.bzl  extensions.bzl  repositories.bzl
rules_monorepo/k8s/: defs.bzl  k8s_apply_helper.sh
rules_monorepo/oci/: defs.bzl
rules_monorepo_rust/: BUILD.bazel  README.md  cargo_defs.bzl  defs.bzl
rules_monorepo_rust/rust/: cargo.bzl  defs.bzl  oci.bzl  transitions.bzl
